# food-kanban

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  run-mypy.sh
food_kanban/: asgi.py  settings.py  urls.py  wsgi.py
food_kanban/apps/meals_app/: apps.py  models.py
food_kanban/settings/: development.py
meals_app/: meal_enums.py  models.py
